The Lammer Game

--- a/index.html
+++ b/index.html
@@ -1,12 +1,134 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>mehhhh</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>The Lammer Game</title>
+
+    <!-- Bootstrap -->
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
+
+     <!--<script type="text/javascript" src="http://localhost/phaser/build/phaser.min.js"></script> -->
+    <script type="text/javascript" src="phaser.min.js"></script>
+    <script type="text/javascript" src="someone.js"></script>
+    <script type="text/javascript" src="spawner.js"></script>
+    <script type="text/javascript" src="scoreboard.js"></script>
+    <script type="text/javascript" src="atm.js"></script>
+    <script type="text/javascript" src="secre.js"></script>
+    <script type="text/javascript" src="cracker.js"></script>
+    <script type="text/javascript" src="map.js"></script>
+    <script type="text/javascript" src="cursor.js"></script>
+    <script type="text/javascript" src="game.js"></script>
+    <script type="text/javascript" src="sysadmin.js"></script>
+    <script type="text/javascript" src="phone.js"></script>
+    <script type="text/javascript" src="door.js"></script>
+    <script type="text/javascript" src="genericSpriteFunctions.js"></script>
   </head>
 
+
+  <!-- ATM's Modal -->
+  <div class="modal fade" id="welcomeModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="myModalLabel">The Lammer Game</h4>
+        </div>
+        <div class="modal-body">
+          <div style="text-align: center">
+            <h1>Bienvenido!</h1>
+            <img src="assets/cracker.png" style="width: 50%"></br>
+          </div>
+          <h3>
+          Bienvenido a "The Lammer Game", "Lammer" es un término utilizado por los hackers para denominar a los "hackers malos", que en vez de hacer cosas buenas para la sociedad se dedican a hacer robos aprovechándose de sus conocimientos.
+          En este juego tú eres un hacker malo y debes conseguir el mayor dinero posible.
+          Este juego es educativo y su objetivo es que tú aprendas a ser responzable con las nuevas tecnologías.
+          </h3>
+        </div>
+        <div class="modal-footer" style="text-align: center">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">A jugar!</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- ATM's Modal -->
+  <div class="modal fade" id="atmModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="qwerty">Fraudes en ATM's</h4>
+        </div>
+        <div class="modal-body">
+          <div style="text-align: center">
+          <h1>Fraudes en ATM's</h1>
+          <img src="assets/images/atm.jpg" style="width: 50%"></br>
+          </div>
+          Un extraño dispositivo escondido debajo del panel de los cajeros automáticos, está volviendo millonarios a bandas de delicuentes, con la ayuda de utencilios comúnes y corrientes como una cámara de un teléfono móvil, una placa de circuito y una batería, que al ser escondidos sirven para vaciar las cuentas bancarias de los usuarios.
+          La forma de operar de las pandilas, es adaptando estas cámaras de vídeo detrás de un panel de falso en la parte frontal de cajero automático para poder grabar números PIN, al mismo tiempo que utilizan otro dispositivo para clonar las tarjetas bancarias.La policía aconseja estar alerta y también advierten que no es buena idea arrancar los dispositivos en caso de encontrarlos, ya que se corre el riesgo de ser perseguido por los pandilleros para poder recuperar datos que potencialmente podrían valer miles de libras y que podrían servir como evidencia para incriminarlos.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary continuePlaying" data-dismiss="modal">Continuar jugando</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="phishingModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="asdf">Phishing</h4>
+        </div>
+        <div class="modal-body">
+          <div style="text-align: center">
+            <h1>Phishing</h1>
+            <img src="assets/images/phishing.png" style="width: 50%"></br>
+          </div>
+          Phishing o suplantación de identidad es un término informático que denomina un modelo de abuso informático y que se comete mediante el uso de un tipo de ingeniería social caracterizado por intentar adquirir información confidencial de forma fraudulenta (como puede ser una contraseña o información detallada sobre tarjetas de crédito u otra información bancaria). El cibercriminal, conocido como phisher, se hace pasar por una persona o empresa de confianza en una aparente comunicación oficial electrónica, por lo común un correo electrónico, o algún sistema de mensajería instantánea o incluso utilizando también llamadas telefónicas.
+          Dado el creciente número de denuncias de incidentes relacionados con el phishing, se requieren métodos adicionales de protección. Se han realizado intentos con leyes que castigan la práctica y campañas para prevenir a los usuarios con la aplicación de medidas técnicas a los programas.
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary continuePlaying" data-dismiss="modal">Continuar jugando</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="modal fade" id="gameOverModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          <h4 class="modal-title" id="xxx">Game Over</h4>
+        </div>
+        <div class="modal-body" style="text-align: center">
+          <h1>Game Over ! :(</h1>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary playAgain" data-dismiss="modal">Volver a jugar :)</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
   <body>
-    mehhhh
+  <div class="container">
+    <div id="title"><h1>The Lammer Game</h1></div>
+    <div id="game"></div>
+  </div>
+
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="js/modal.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
